Closed
Bug 258473
Opened 21 years ago
Closed 21 years ago
Taskbar icons all the same (moz head) instead of functional icons (browser vs. mail)
Categories
(SeaMonkey :: UI Design, defect)
SeaMonkey
UI Design
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.8beta1
People
(Reporter: lohphat, Assigned: darin.moz)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
2.18 KB,
patch
|
Biesinger
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a4) Gecko/20040908
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a4) Gecko/20040908
See summary
Reproducible: Always
Steps to Reproduce:
1. Install 20040908 win32 build.
Actual Results:
The app works ok, but the win32 taskbar icons are all identical. (XP) Modern skin.
Expected Results:
Browser, mail, composer, etc. icons should be different.
Comment 1•21 years ago
|
||
Confirming with two Linux builds (one Gtk1, the other Gtk2) I just finished
compiling. I'm seeing the standard X icon for all Mozilla windows.
My last builds were three or four days old and didn't have this bug.
Assignee: general → jag
Severity: trivial → normal
Status: UNCONFIRMED → NEW
Component: Installer → XP Apps
Ever confirmed: true
Flags: blocking1.8a4?
Keywords: regression
OS: Windows XP → All
QA Contact: bugzilla → pawyskoczka
Hardware: PC → All
Comment 2•21 years ago
|
||
Assignee: jag → darin
| Assignee | ||
Updated•21 years ago
|
Severity: normal → critical
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8beta
| Assignee | ||
Comment 3•21 years ago
|
||
Untested patch, but very likely to do the trick. I'm building seamonkey now to
verify this patch.
| Assignee | ||
Comment 4•21 years ago
|
||
Comment on attachment 158234 [details] [diff] [review]
v1 patch
NS_APP_CHROME_DIR_LIST is optional. this patch makes it so.
Attachment #158234 -
Flags: review?(cbiesinger)
Updated•21 years ago
|
Attachment #158234 -
Flags: review?(cbiesinger) → review+
| Assignee | ||
Comment 5•21 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Flags: blocking1.8a4?
Comment 6•21 years ago
|
||
Verified with a Gtk1 build I just made. Thanks Darin! :-)
Status: RESOLVED → VERIFIED
Comment 7•21 years ago
|
||
*** Bug 258627 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•