fixes bug 258473 "Taskbar icons all the same (moz head) instead of functional icons (browser vs. mail)" r=biesi